# usfm

./: Cargo.toml  README.md  translations.err
.github/workflows/: publish.yml
src/: format.rs  lib.rs  parser.rs  structured.rs  usfm.pest  usfm.rs
src/parser/: pairs.rs
src/usfm/: identifier.rs
tests/: format_tests.rs  parser.rs  translations.rs
usfm/: 02-GENengwebpb.usfm  sample.usfm  translations.json
